# ScoutingAgent

./: .cursorignore  .env.example  .gitignore  README.md  _fetch_key.txt  _recv_fetch.txt  _recv_plot1.txt  _recv_plot2.txt  app.py  possession_analyzer.py  possession_description.py  possession_gold_overlay.py  possession_qualifiers.py  pyproject.toml  wyscout.py
bruin-pipeline/: pipeline.yml  pyproject.toml  wyscout_bronze_scope.py  wyscout_dimension_scope.py
bruin-pipeline/assets/bronze/: br_areas.py  br_competitions.py  br_matches.py  br_players.py  br_seasons.py  br_teams.py  bronze_match_events.py
bruin-pipeline/assets/dimension/: dim_areas.py  dim_competitions.py  dim_matches.py  dim_players.py  dim_seasons.py  dim_teams.py
bruin-pipeline/assets/gold/: gold_match_carry_event.sql  gold_match_clearance_event.sql  gold_match_duel_event.sql  gold_match_goalkeeper_exit_event.sql  gold_match_infraction_event.sql  gold_match_pass_event.sql  gold_match_possession.sql  gold_match_possession_llm_general.py  gold_match_possession_llm_prompts.py  gold_match_recovery_interception_event.sql  gold_match_set_piece_event.sql  gold_match_shot_against_event.sql  gold_match_shot_event.sql  gold_match_touch_in_box_event.sql
bruin-pipeline/assets/init/: create_bqml_gemini_remote_model.sql
bruin-pipeline/assets/silver/: silver_match_event.py  silver_match_possession.py
config/: player_compare_metrics.yaml
docs/: RAG_FEATURE.md
documentations/: Events.md  event_types_documentation.md
langgraph_flow/: __init__.py  my_scouting_report.py  scouting_state.py  viz_helpers.py  viz_nodes.py
notebooks/: possession_description.ipynb  tools.ipynb  visualization.ipynb  wyscout_exploration.ipynb
pages/: 1_Overview.py  2_Match_Analysis.py  3_Player_Scouting.py  4_Chatbot.py  5_Player_Compare.py  6_Report_RAG.py
prompts/: player_stats_summary_v1.yaml  possession_description_general_v1.yaml  possession_description_player_section_v1.yaml  scouting_report_v1.yaml
services/: __init__.py  bigquery_client.py  chatbot_service.py  data_agent_client.py  llm_factory.py  match_repository.py  player_compare_repository.py  player_compare_service.py  prompt_loader.py  report_pdf.py  report_rag_service.py  runtime_secrets.py  scouting_report_repository.py
visualization/: __init__.py  scouting_viz.py
