[project]
name = "bruin-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
description = "Deps for Bruin Python assets. wyscout.py (repo root) needs: pandas, requests, tqdm, python-dotenv. bronze/br_seasons adds google-cloud-bigquery."
dependencies = [
    # wyscout.py (imports)
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "tqdm>=4.66.0",
    # bronze/br_seasons.py (BigQuery read of bronze_competition)
    "google-cloud-bigquery>=3.25.0",
]
